fix: inicio de ajuste de testes unitarios ainda com erro
src\DocumentManagement.Gr
pcServer\Services\DocumentStorageService.cs(59,44): error CS0117: "S
torageType" não contém uma definição para "StorageTypeS3"

--- a/src/DocumentManagement.GrpcServer/DocumentManagement.GrpcServer.csproj
+++ b/src/DocumentManagement.GrpcServer/DocumentManagement.GrpcServer.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.GrpcNetClient" Version="1.11.0-beta.1" />
   </ItemGroup>
 
   <ItemGroup>
